Transferencia de repositorio final

--- a/elementos/src/main/webapp/usuarios.html
+++ b/elementos/src/main/webapp/usuarios.html
@@ -8,7 +8,7 @@
         <script>
             $(document).ready(function(){
                 $("#botonUsuario").click(function(){
-                    $.getJSON("http://localhost:8084/weba/usuarios",function(datos){
+                    $.getJSON("http://localhost:8084/elementos/usuarios",function(datos){
                         alert("Total de usuarios "+datos.length+" el primero se llama: "+datos[0].nombre);
                     })
                 })
